--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
@@ -20,8 +21,10 @@
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.3",
     "react-simple-typewriter": "^5.0.1",
     "react-social-icons": "^6.16.0",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
