--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint"
   },
+  {
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "@types/node": "20.6.2",
@@ -17,6 +18,7 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "framer-motion": "^11.1.7",
+    "lucide-react": "^0.307.0",
     "next": "13.5.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
@@ -28,4 +30,5 @@
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
+}
 }
